[gd_scene load_steps=30 format=3 uid="uid://1il1symgxhtg"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_hm1dg"]
[ext_resource type="Material" path="res://assets/textures/3d_wheel_texture.tres" id="2_bo4w5"]
[ext_resource type="Script" path="res://scripts/AudioreactiveDirectionalLight3D.gd" id="3_chvx7"]
[ext_resource type="FontFile" uid="uid://cwgup3btg70pd" path="res://assets/fonts/GreatVibes-Regular.otf" id="3_llyuo"]
[ext_resource type="Script" path="res://scripts/AudioReactiveLabel.gd" id="4_i4ng6"]
[ext_resource type="Script" path="res://scripts/TempoWheel.gd" id="4_wtar3"]
[ext_resource type="Script" path="res://scripts/AudioreactiveDirectionalLight3D_2.gd" id="4_yhj0m"]
[ext_resource type="Script" path="res://scripts/MouseSelectCamera.gd" id="5_blarc"]
[ext_resource type="Environment" uid="uid://daq2qgxejb7j3" path="res://assets/environments/Sunset.tres" id="7_aq5qb"]
[ext_resource type="Shader" uid="uid://b0il2ry0653b0" path="res://mesh/3d_test.tres" id="8_h2jbp"]
[ext_resource type="Shader" uid="uid://bns4uwtyb40yw" path="res://mesh/clouds.res" id="9_eq2w6"]
[ext_resource type="PackedScene" uid="uid://4t5xj5wxscyk" path="res://scenes/settings.tscn" id="12_86kph"]

[sub_resource type="CylinderMesh" id="CylinderMesh_l0opf"]
height = 0.105

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3boh"]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id="PlaneMesh_k3aeg"]
size = Vector2(0.965, 0.29)

[sub_resource type="Gradient" id="Gradient_oqhc8"]
offsets = PackedFloat32Array(0.448819, 0.716535)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xh11v"]
gradient = SubResource("Gradient_oqhc8")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2p7i"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("GradientTexture2D_xh11v")
emission_enabled = true
emission = Color(0.176471, 0.917647, 0, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_3n71x"]
size = Vector3(0.252735, 0.249855, 0.226482)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8y8ii"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lokcm"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("GradientTexture2D_xh11v")
emission_enabled = true
emission = Color(0.176471, 0.917647, 0, 1)
emission_energy_multiplier = 0.0

[sub_resource type="Animation" id="Animation_uf3c3"]
resource_name = "cameraSway"
length = 22.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8, 12, 15, 19),
"transitions": PackedFloat32Array(0.757858, 0.659754, 0.482968, 0.707107, 0.435275, 0.840896),
"update": 0,
"values": [Vector3(-0.25, 1.5, 1.384), Vector3(0, 1.4, 1.384), Vector3(0, 1.5, 1.384), Vector3(0.25, 1.45, 1.384), Vector3(-0.25, 1.6, 1.384), Vector3(0.1, 1.5, 1.384)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kni14"]
_data = {
"cameraSway": SubResource("Animation_uf3c3")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ih4hn"]
frequency = 0.0074

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v8onm"]
seamless = true
as_normal_map = true
bump_strength = 32.0
noise = SubResource("FastNoiseLite_ih4hn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bngas"]
render_priority = 0
shader = ExtResource("8_h2jbp")
shader_parameter/Texture2DParameter = SubResource("NoiseTexture2D_v8onm")

[sub_resource type="PlaneMesh" id="PlaneMesh_ku042"]
lightmap_size_hint = Vector2i(502, 502)
material = SubResource("ShaderMaterial_bngas")
size = Vector2(100, 100)
subdivide_width = 50
subdivide_depth = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m8iya"]
render_priority = 0
shader = ExtResource("9_eq2w6")

[sub_resource type="SphereMesh" id="SphereMesh_brx2b"]
material = SubResource("ShaderMaterial_m8iya")
flip_faces = true
radius = 17.995
height = 8.535
is_hemisphere = true

[node name="menu" type="Node3D"]
script = ExtResource("1_hm1dg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.989533, 0, 0.144304, 0, 1, 0, -0.144304, 0, 0.989533, -0.25, 1.5, 1.384)
script = ExtResource("5_blarc")

[node name="LevelWheel" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.980519, -0.196425, 4.28598e-08, 4.37114e-08, 1.91069e-15, 1, -0.196425, 0.980519, 8.58603e-09, 0.24, 1.384, 0.01)
material_override = ExtResource("2_bo4w5")
mesh = SubResource("CylinderMesh_l0opf")
surface_material_override/0 = SubResource("StandardMaterial3D_k3boh")

[node name="Trigger1" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(-4.37114e-08, -0.190809, 0.981627, 1.77081e-15, 0.981627, 0.190809, -1, 8.34052e-09, -4.29083e-08, -0.0420526, -0.00842434, 0.396189)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape1" type="Area3D" parent="LevelWheel/Trigger1"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger1/TriggerShape1"]
transform = Transform3D(1, 3.55271e-15, -2.55788e-35, -3.55271e-15, 1, 0, 2.55788e-35, 0, 1, -0.176, 0, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger2" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(0.686529, -0.195863, 0.700225, 0.137819, 0.98063, 0.139173, -0.713921, 0.000957719, 0.700225, -0.353794, -0.0708749, 0.292783)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape2" type="Area3D" parent="LevelWheel/Trigger2"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger2/TriggerShape2"]
transform = Transform3D(1, 0, -2.11758e-22, -3.55271e-15, 1, -3.55271e-15, 0, 0, 1, -0.176424, -1.22785e-08, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger3" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(-0.980519, -0.196425, -3.51254e-08, -0.196425, 0.980519, -4.28598e-08, 4.28598e-08, -3.51254e-08, -1, -0.490259, -0.0982127, -0.00785887)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape3" type="Area3D" parent="LevelWheel/Trigger3"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger3/TriggerShape3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.104476, 0, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger4" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(-0.686529, -0.195863, 0.700225, -0.137819, 0.980631, 0.139173, -0.713921, -0.00095772, -0.700225, -0.355719, -0.0712604, -0.329572)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape4" type="Area3D" parent="LevelWheel/Trigger4"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger4/TriggerShape4"]
transform = Transform3D(1, 0, -3.33204e-16, 0, 1, -3.55271e-15, -2.72601e-16, -1.77636e-15, 1, 0.104476, -3.72529e-09, -1.19209e-07)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger5" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(-4.37114e-08, -0.190809, 0.981627, 0, 0.981627, 0.190809, -1, 8.34053e-09, -4.29083e-08, -0.0254656, -0.00510143, -0.42768)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape5" type="Area3D" parent="LevelWheel/Trigger5"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger5/TriggerShape5"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger6" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(0.698047, -0.19248, 0.689697, 0.139838, 0.981292, 0.132327, -0.702265, 0.00407554, 0.711904, 0.270248, 0.0183608, -0.35252)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape6" type="Area3D" parent="LevelWheel/Trigger6"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger6/TriggerShape6"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger7" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(0.980494, -0.196462, -0.00582312, 0.19642, 0.980494, -0.00700529, 0.00708597, 0.00572464, 0.999958, 0.412331, 0.0277434, -0.0129466)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape7" type="Area3D" parent="LevelWheel/Trigger7"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/Trigger7/TriggerShape7"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger8" type="MeshInstance3D" parent="LevelWheel"]
transform = Transform3D(0.692944, -0.200394, -0.692583, 0.138816, 0.979707, -0.144583, 0.707501, 0.00404577, 0.7067, 0.293372, 0.0229932, 0.299)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TriggerShape8" type="Area3D" parent="LevelWheel/Trigger8"]
unique_name_in_owner = true

[node name="CollisionShape3D8" type="CollisionShape3D" parent="LevelWheel/Trigger8/TriggerShape8"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="level" type="Label3D" parent="LevelWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, -3.75129e-16, 0.980519, 4.28598e-08, 1, 8.58603e-09, -0.0189722, 0.0947058, 0.282839)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.87451, 0.85098, 0.886275, 0.784314)
text = "level"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="levelName" type="Label3D" parent="LevelWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, -3.67419e-15, 0.980519, 4.28598e-08, 1, 8.58603e-09, -0.0293756, 0.0926217, 0.0239358)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.905882, 0.627451, 0.635294, 0.784314)
text = "tutorial
"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="startGame" type="StaticBody3D" parent="LevelWheel/levelName"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelWheel/levelName/startGame"]
transform = Transform3D(-1.31134e-08, 0.3, -1.31134e-08, -8.47033e-22, -1.31134e-08, -0.3, -0.3, -1.31134e-08, 5.73206e-16, 0, 0.0130774, 0)
shape = SubResource("CapsuleShape3D_8y8ii")

[node name="levelDifficulty" type="Label3D" parent="LevelWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, -3.67419e-15, 0.980519, 4.28598e-08, 1, 8.58603e-09, -0.0469438, 0.0891023, -0.204609)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.87451, 0.85098, 0.886275, 0.784314)
text = "beginner"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="TempoWheel" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.596663, 0.0631961, 2.76239e-09, -5.22525e-16, -2.62268e-08, 0.6, 0.0631961, 0.596663, 2.60809e-08, -1.23575, 1.12419, -0.0341376)
material_override = ExtResource("2_bo4w5")
mesh = SubResource("CylinderMesh_l0opf")
surface_material_override/0 = SubResource("StandardMaterial3D_k3boh")
script = ExtResource("4_wtar3")

[node name="Trigger1" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(-4.37114e-08, -0.190809, 0.981627, -1.42109e-14, 0.981627, 0.190809, -1, 8.34052e-09, -4.29083e-08, -0.0420523, -0.00842437, 0.396189)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_lokcm")

[node name="TempoTrigger1" type="Area3D" parent="TempoWheel/Trigger1"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger1/TempoTrigger1"]
transform = Transform3D(1, 0, -2.11758e-22, -3.55271e-15, 1, -3.55271e-15, 0, 0, 1, -0.176424, -1.22785e-08, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger2" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(0.686529, -0.195863, 0.700225, 0.137819, 0.98063, 0.139173, -0.713921, 0.000957719, 0.700225, -0.353794, -0.0708749, 0.292783)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger2" type="Area3D" parent="TempoWheel/Trigger2"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger2/TempoTrigger2"]
transform = Transform3D(1, 0, -2.11758e-22, -3.55271e-15, 1, -3.55271e-15, 0, 0, 1, -0.176424, -1.22785e-08, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger3" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(-0.980519, -0.196425, -3.51254e-08, -0.196425, 0.980519, -4.28598e-08, 4.28598e-08, -3.51254e-08, -1, -0.490259, -0.0982127, -0.00785887)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger3" type="Area3D" parent="TempoWheel/Trigger3"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger3/TempoTrigger3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.104476, 0, 0)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger4" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(-0.686529, -0.195863, 0.700225, -0.137819, 0.980631, 0.139173, -0.713921, -0.00095772, -0.700225, -0.355719, -0.0712604, -0.329572)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger4" type="Area3D" parent="TempoWheel/Trigger4"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger4/TempoTrigger4"]
transform = Transform3D(1, 0, -3.33204e-16, 0, 1, -3.55271e-15, -2.72601e-16, -1.77636e-15, 1, 0.104476, -3.72529e-09, -1.19209e-07)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger5" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(-4.37114e-08, -0.190809, 0.981627, 0, 0.981627, 0.190809, -1, 8.34053e-09, -4.29083e-08, -0.0254656, -0.00510143, -0.42768)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger5" type="Area3D" parent="TempoWheel/Trigger5"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger5/TempoTrigger5"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger6" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(0.698047, -0.19248, 0.689697, 0.139838, 0.981292, 0.132327, -0.702265, 0.00407554, 0.711904, 0.270248, 0.0183608, -0.35252)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger6" type="Area3D" parent="TempoWheel/Trigger6"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger6/TempoTrigger6"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger7" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(0.980494, -0.196462, -0.00582312, 0.19642, 0.980494, -0.00700529, 0.00708597, 0.00572464, 0.999958, 0.412331, 0.0277434, -0.0129466)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger7" type="Area3D" parent="TempoWheel/Trigger7"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger7/TempoTrigger7"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="Trigger8" type="MeshInstance3D" parent="TempoWheel"]
transform = Transform3D(0.692944, -0.200394, -0.692583, 0.138816, 0.979707, -0.144583, 0.707501, 0.00404577, 0.7067, 0.293372, 0.0229932, 0.299)
mesh = SubResource("PlaneMesh_k3aeg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s2p7i")

[node name="TempoTrigger8" type="Area3D" parent="TempoWheel/Trigger8"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TempoWheel/Trigger8/TempoTrigger8"]
transform = Transform3D(1, 1.77636e-15, -1.59765e-15, 0, 1, -1.42109e-14, -4.65662e-10, 0, 1, 0.16981, 3.72529e-09, -0.000296474)
shape = SubResource("BoxShape3D_3n71x")

[node name="tempo" type="Label3D" parent="TempoWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, -7.10543e-15, 0.980519, 4.28598e-08, 1, 8.58602e-09, -0.0189722, 0.0947057, 0.262053)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.87451, 0.85098, 0.886275, 0.784314)
text = "tempo"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="difficultylevel" type="Label3D" parent="TempoWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, 0, 0.980519, 4.28598e-08, 1, 8.58601e-09, -0.0189722, 0.0947057, -0.207996)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.87451, 0.85098, 0.886275, 0.784314)
text = "easy"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="tempoDisplay" type="Label3D" parent="TempoWheel"]
transform = Transform3D(-0.980519, 4.37114e-08, -0.196425, -0.196425, 0, 0.980519, 4.28598e-08, 1, 8.586e-09, -0.0189722, 0.0947057, 0.00117433)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.827451, 0.588235, 0.568627, 0.784314)
text = "60
"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
editor_only = true

[node name="title" type="Label3D" parent="."]
transform = Transform3D(0.98246, 0, 0.186473, 0, 1, 0, -0.186473, 0, 0.98246, -1.19221, 2.07236, 0)
transparency = 0.1
text = "polyrhythmia"
font = ExtResource("3_llyuo")
font_size = 72
outline_size = 6
script = ExtResource("4_i4ng6")

[node name="settings" type="Label3D" parent="."]
transform = Transform3D(1, -1.03029e-13, 3.67996e-16, -5.68434e-14, 1, 1.95399e-14, 3.67996e-16, 1.77636e-15, 1, 0.712578, 2.18708, 0.106587)
pixel_size = 0.0024
billboard = 2
double_sided = false
no_depth_test = true
texture_filter = 0
modulate = Color(0.905882, 0.627451, 0.635294, 0.784314)
text = "settings"
font = ExtResource("3_llyuo")
font_size = 96
outline_size = 2

[node name="settings" type="StaticBody3D" parent="settings"]
unique_name_in_owner = true
transform = Transform3D(1, -4.25155e-16, 8.70078e-15, -5.03503e-16, 0.994318, 0.106455, -8.6966e-15, -0.106455, 0.994318, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="settings/settings"]
transform = Transform3D(-1.31134e-08, 0.3, -1.31134e-08, -8.47033e-22, -1.31134e-08, -0.3, -0.3, -1.31134e-08, 5.73206e-16, 0, 0.0130774, 0)
shape = SubResource("CapsuleShape3D_8y8ii")

[node name="audioReactiveLight1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.980126, 0.102734, -0.169702, -0.16698, 0.889103, -0.426162, 0.107101, 0.446029, 0.888587, -17.4125, 3.03929, 5.76672)
light_energy = 2.007
script = ExtResource("3_chvx7")

[node name="audioReactiveLight2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.997894, -0.0335913, 0.0554876, 0.0183505, -0.674302, -0.738228, 0.0622134, 0.737692, -0.672265, 9.1461, 3.03929, 5.10481)
light_energy = 2.007
script = ExtResource("4_yhj0m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kni14")
}

[node name="Backdrop" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Backdrop"]
environment = ExtResource("7_aq5qb")

[node name="Sunset" type="Node3D" parent="Backdrop"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Backdrop/Sunset"]
transform = Transform3D(1, 0, 0, 0, -0.99961, 0.0279215, 0, -0.0279215, -0.99961, 0, 6.63931, 2.46136)
light_color = Color(1, 1, 0.886275, 1)
light_angular_distance = 4.49
shadow_enabled = true
shadow_bias = 2.98
shadow_opacity = 0.3

[node name="Water" type="MeshInstance3D" parent="Backdrop/Sunset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135299, 0)
mesh = SubResource("PlaneMesh_ku042")
skeleton = NodePath("../../..")

[node name="Clouds" type="MeshInstance3D" parent="Backdrop/Sunset"]
transform = Transform3D(0.999846, -0.0175571, 0, 0.0175571, 0.999846, 0, 0, 0, 1, -0.00479043, -0.0146099, -4.595)
mesh = SubResource("SphereMesh_brx2b")
skeleton = NodePath("../../..")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="settings" parent="GUI" instance=ExtResource("12_86kph")]
visible = false

[node name="Button" type="Button" parent="GUI"]
light_mask = 0
visibility_layer = 0
offset_left = -4.0
offset_top = -3.0
offset_right = 316.0
offset_bottom = 138.0
rotation = 0.00631309
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="GUI/Button" to="." method="_on_button_pressed"]
